# yamz

./: .gitignore  LICENSE  README.md  SPEC.md  WALKTHROUGH.md  pyproject.toml  viewer.html
javascript/: README.md  package-lock.json  package.json  tsconfig.json
javascript/src/: cli.ts  index.test.ts  index.ts
javascript/tests/: bundler.test.ts
tests/: test_bundler.py
yamz/: main.py
