[project]
name = "yamz-md"
version = "0.1.0"
description = "Yet Another Markdown Zip bundler"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "David de Koning" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/daviddekoning/yamz"
Repository = "https://github.com/daviddekoning/yamz"
Issues = "https://github.com/daviddekoning/yamz/issues"

[project.scripts]
yamz = "yamz.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
